# DeepLLMScanner

./: .gitignore  README.md  pyproject.toml
.claude/: PROJECT.md
.claude/commands/: commit.md
docs/: CURRENT_GOAL.md  ROADMAP.md
docs/git/: history.md
docs/git/logs/: 2026-02-19-1343-d9fbc85.md  2026-02-19-1430-f43e913.md  2026-02-20-a75d4ed.md
examples/: README.md  config.yaml
src/: README.md  __init__.py  cli.py
src/core/: __init__.py
src/core/attack_engine/: __init__.py  generator.py  models.py
src/core/controller/: __init__.py  config.py  scanner.py
src/core/detection_engine/: __init__.py  email_classifier.py  llm_judge.py
src/core/execution_engine/: __init__.py  client.py  context.py  executor.py  models.py
src/core/reporting/: __init__.py  base.py  html_reporter.py  json_reporter.py
src/core/scoring_engine/: __init__.py  scorer.py
src/core/state_engine/: __init__.py  conversation.py  manager.py  state.py
src/core/validation_engine/: __init__.py  stability.py  validator.py
src/deepllm_scanner/: __init__.py  cli.py
src/plugins/: __init__.py  base.py  registry.py
src/plugins/LLM01_prompt_injection/: __init__.py  plugin.py
src/plugins/LLM02_data_leak/: __init__.py  plugin.py
src/plugins/LLM03_supply_chain/: plugin.py
src/runtime/: __init__.py
tests/: __init__.py  test_attack_engine.py  test_controller.py  test_e2e.py  test_email_classifier.py  test_embedding_runtime.py  test_execution.py  test_llm07_plugin.py  test_plugins.py  test_reporting.py  test_runtime.py  test_scoring_engine.py  test_stability_validator.py  test_state_engine.py  test_validation_engine.py
(+17 files in other folders)
